--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-server": "webpack-dev-server --mode=development"
+    "dev-server": "webpack-dev-server --mode=development --content-base ./public",
+    "sass": "node-sass -r sass/main.scss -o public",
+    "ngrok": "ngrok http 8080"
   },
   "repository": {
     "type": "git",
@@ -19,10 +21,11 @@
   },
   "homepage": "https://github.com/Jabarlew/BLPortfolio#readme",
   "dependencies": {
-    "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0"
   },
   "devDependencies": {
+    "ngrok": "^3.1.0",
+    "node-sass": "^4.9.3",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
