--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "shell-exec 'npm run dev-server' 'npm run sass -- -w'",
     "dev-server": "webpack-dev-server --mode=development --content-base ./public",
     "sass": "node-sass -r sass/main.scss -o public",
     "ngrok": "ngrok http 8080"
@@ -26,6 +27,7 @@
   "devDependencies": {
     "ngrok": "^3.1.0",
     "node-sass": "^4.9.3",
+    "shell-executor": "^6.0.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
