fix webpack config

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "shell-exec 'npm run dev-server' 'npm run sass -- -w'",
-    "build": "shell-exec 'npm run sass' 'webpack --env=production'",
+    "dev": "npm run dev-server",
+    "build": "webpack --env=production",
     "dev-server": "webpack-dev-server --env=development",
-    "sass": "node-sass -r sass/main.scss -o public",
+    "sass": "node-sass -r sass/main.scss -o public/assets",
     "ngrok": "ngrok http 8080 -host-header='localhost:8080'"
   },
   "repository": {
@@ -27,10 +27,15 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.4",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "ngrok": "^3.1.0",
     "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "shell-executor": "^6.0.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9",
