rename sass folder

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "shell-exec 'npm run sass:dev' 'npm run dev-server'",
     "js:build": "webpack --env=production",
     "dev-server": "webpack-dev-server --env=development",
-    "sass": "node-sass -r src/sass/main.scss -o dist/assets",
+    "sass": "node-sass -r src/styles/main.scss -o dist/assets",
     "sass:dev": "npm run sass && npm run sass -- -w",
     "ngrok": "ngrok http 8080 -host-header='localhost:8080'"
   },
