--- a/package.json
+++ b/package.json
@@ -28,9 +28,14 @@
   },
   "homepage": "https://github.com/Jabarlew/BLPortfolio#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "normalize.css": "^8.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.5",
+    "@babel/preset-env": "^7.1.5",
+    "babel-loader": "^8.0.4",
     "http-server": "^0.11.1",
     "ngrok": "^3.1.0",
     "node-sass": "^4.9.3",
