--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.5",
     "@babel/preset-env": "^7.1.5",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "http-server": "^0.11.1",
     "ngrok": "^3.1.0",
     "node-sass": "^4.9.3",
